--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="App">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -11,8 +11,10 @@
 
     <script src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.4.min.js"></script>
     <script src="//ajax.aspnetcdn.com/ajax/bootstrap/3.3.5/bootstrap.min.js"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
 </head>
-<body>
+<body ng-controller="TodoController">
 
 
 <h1><span class="todo">TOD</span><span class="oss"><span class="todo">O</span>SS</span></h1>
@@ -22,7 +24,7 @@
         <div class="col-md-12">
             <form>
                 <input id="new-todo" type="text" placeholder="What's in your mind?"
-                       autocomplete="off">
+                       autocomplete="off" ng-model="newTodoText">
                 <input type="submit" class="hidden">
             </form>
         </div>
@@ -39,7 +41,7 @@
                 <li>
                     <div class="item">
                         <div class="status"></div>
-                        <div class="text">Sample TODO 2.</div>
+                        <div class="text">Sample TODO 2. {{ newTodoText }}</div>
                     </div>
                 </li>
                 <li>
